[gd_scene load_steps=14 format=2]

[ext_resource path="res://pic/bg.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/Chinese.tres" type="DynamicFont" id=2]
[ext_resource path="res://pic/google.png" type="Texture" id=3]
[ext_resource path="res://fonts/font2.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/font1.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/font3.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/style重新註冊.tres" type="StyleBox" id=7]
[ext_resource path="res://script/1.1.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0941176, 0.815686, 0.909804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.87451, 0.796078, 0.796078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
texture = ExtResource( 1 )

[node name="底色" type="Panel" parent="bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -649.5
margin_top = -371.0
margin_right = 649.5
margin_bottom = 371.0
custom_styles/panel = SubResource( 5 )

[node name="google" type="Button" parent="bg/底色"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.0
margin_top = -314.0
margin_right = 322.0
margin_bottom = -140.0
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
icon = ExtResource( 3 )
flat = true

[node name="姓名" type="Label" parent="bg/底色"]
margin_left = 290.0
margin_top = 312.0
margin_right = 470.0
margin_bottom = 390.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "姓名："

[node name="UserName" type="LineEdit" parent="bg/底色"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.5
margin_top = -61.0
margin_right = 400.5
margin_bottom = 19.0
custom_colors/font_color = Color( 0.717647, 0.662745, 0.662745, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "User Name"
placeholder_alpha = 1.0

[node name="密碼" type="Label" parent="bg/底色"]
margin_left = 290.0
margin_top = 432.0
margin_right = 470.0
margin_bottom = 510.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "密碼："

[node name="Password" type="LineEdit" parent="bg/底色"]
margin_left = 500.0
margin_top = 430.0
margin_right = 1050.0
margin_bottom = 510.0
custom_colors/font_color = Color( 0.717647, 0.662745, 0.662745, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
expand_to_text_length = true
clear_button_enabled = true
selecting_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "Password"
placeholder_alpha = 1.0

[node name="forget" type="Button" parent="bg/底色"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = -142.0
margin_right = -200.0
margin_bottom = -62.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "忘記密碼"

[node name="reregister" type="Button" parent="bg/底色"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -142.0
margin_right = 420.0
margin_bottom = -62.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "重新註冊"

[node name="enter" type="Button" parent="bg/底色"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -142.0
margin_right = 110.0
margin_bottom = -62.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "進入遊戲"

[node name="login" type="Label" parent="bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = 69.0
margin_right = 250.0
margin_bottom = 214.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 6 )
text = "login"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="bg/底色/forget" to="." method="_on_forget_pressed"]
[connection signal="pressed" from="bg/底色/reregister" to="." method="_on_reregister_pressed"]
[connection signal="pressed" from="bg/底色/enter" to="." method="_on_enter_pressed"]
